@@ -1,5 +1,5 @@
 /****************************************************************************
-* Copyright (c) 2019, CEA
+* Copyright (c) 2021, CEA
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -355,12 +355,12 @@ int Op_EF_base::impr(Sortie& os, const Operateur_base& op) const
   const int impr_bord=(la_zone_EF.zone().Bords_a_imprimer().est_vide() ? 0:1);
   int flag=0;
   if (Process::je_suis_maitre()) flag=1;
-  SFichier Flux;
-  op.ouvrir_fichier( Flux,"",flag);
-  SFichier Flux_moment;
-  op.ouvrir_fichier(Flux_moment,"moment",impr_mom&&flag);
-  SFichier Flux_sum;
-  op.ouvrir_fichier(Flux_sum,"sum",impr_sum&&flag);
+  //SFichier Flux;
+  if (!Flux.is_open()) op.ouvrir_fichier( Flux,"",flag);
+  //SFichier Flux_moment;
+  if (!Flux_moment.is_open()) op.ouvrir_fichier(Flux_moment,"moment",impr_mom&&flag);
+  //SFichier Flux_sum;
+  if (!Flux_sum.is_open()) op.ouvrir_fichier(Flux_sum,"sum",impr_sum&&flag);
   EcrFicPartage Flux_face;
   op.ouvrir_fichier_partage(Flux_face,"",impr_bord);
 
