@@ -1,5 +1,5 @@
 /****************************************************************************
-* Copyright (c) 2020, CEA
+* Copyright (c) 2021, CEA
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -30,6 +30,7 @@
 #include <Ref_Zone_PolyMAC.h>
 #include <Ref_Zone_Cl_PolyMAC.h>
 #include <Zone_PolyMAC.h>
+#include <SFichier.h>
 class Champ_Fonc;
 
 
@@ -92,6 +93,7 @@ protected:
   REF(Champ_base) diffusivite_;
   mutable DoubleTab nu_, nu_fac_; //conductivite aux elements, facteur multiplicatif a appliquer par face
   mutable int nu_a_jour_; //si on doit mettre a jour nu
+  mutable SFichier Flux, Flux_moment, Flux_sum; // Fichiers .out
 };
 
 
