@@ -96,6 +96,7 @@ protected:
   void ajouter_contribution_autre_pb(const DoubleTab& inco, Matrice_Morse& matrice, const Cond_lim& la_cl, std::map<int, std::pair<int, int>>&) const;
   const Milieu_base& milieu() const;
   IntTab elem;
+  mutable SFichier Flux, Flux_moment, Flux_sum;
 };
 template <class _TYPE_> inline T_It_VDF_Elem<_TYPE_>::T_It_VDF_Elem(const T_It_VDF_Elem<_TYPE_>& iter)
   :Iterateur_VDF_base(iter),
@@ -1119,8 +1120,8 @@ template <class _TYPE_>  int T_It_VDF_Elem<_TYPE_>::impr(Sortie& os) const
   mp_sum_for_each_item(flux_bords2);
   if (je_suis_maitre())
     {
-      SFichier Flux;
-      op_base->ouvrir_fichier(Flux,"",1);
+      //SFichier Flux;
+      if (!Flux.is_open()) op_base->ouvrir_fichier(Flux,"",1);
       Flux.add_col(temps);
       for (int num_cl=0; num_cl<nb_front_Cl; num_cl++)
         {
